
lib_LTLIBRARIES = libDttSP.la
#libDttSP_la_LDFLAGS=-module -avoid-version -shared
libDttSP_la_SOURCES = \
	am_demod.c\
	am_demod.h\
	banal.c\
	banal.h\
	bufvec.c\
	bufvec.h\
	common.h\
	complex.h\
	correctIQ.c\
	correctIQ.h\
	cwtones.c\
	cwtones.h\
	cxops.c\
	cxops.h\
	datatypes.h\
	dcblock.c\
	dcblock.h\
	defs.h\
	dttspagc.c\
	dttspagc.h\
	fastrig.c\
	fastrig.h\
	fftw.h\
	filter.c\
	filter.h\
	fm_demod.c\
	fm_demod.h\
	fromsys.h\
	graphiceq.c\
	graphiceq.h\
	iosdr.h\
	keyd.c\
	keyer.c\
	keyer.h\
	keyerio.c\
	lmadf.c\
	lmadf.h\
	local.h\
	meter.c\
	meter.h\
	metermon.c\
	noiseblanker.c\
	noiseblanker.h\
	oscillator.c\
	oscillator.h\
	ovsv.c\
	ovsv.h\
	resample.c\
	resampleF.c\
	resampleF.h\
	resample.h\
	ringb.c\
	ringb.h\
	sdr.c\
	sdrexport.c\
	sdrexport.h\
	spectrum.c\
	spectrum.h\
	speechproc.c\
	speechproc.h\
	splitfields.c\
	splitfields.h\
	spottone.c\
	spottone.h\
	thunk.c\
	thunk.h\
	update.c\
	update.h\
	window.c\
	window.h\
	winmain.c\
	wscompand.c\
	wscompand.h

